fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ section {
 }
 
 #mainContent {
-    top: 20vh;
+    top: 10vh;
     position: absolute;
     left: 50%;
     transform: translate(-50%);
